finish  the  edit part

--- a/src/app/Admin/add-user/add-user.component.html
+++ b/src/app/Admin/add-user/add-user.component.html
@@ -131,10 +131,10 @@
                                                 <select id="role" class="form-control" formControlName="role"
                                                     placeholder="Role" required>
 
-                                                    <option>ADMIN</option>
-                                                    <option>MEDECIN</option>
-                                                    <option>SECRETAIRE</option>
-                                                    <option>INFIRMIER</option>
+                                                    <option>admin</option>
+                                                    <option>medecin</option>
+                                                    <option>secretaire</option>
+                                                    <option>infirmier</option>
                                                 </select>
                                             </div>
                                         </div>
