--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -10,15 +10,84 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Users: </h3>
+                            <h3>Acceuil</h3>
                         </div>
                     </div>
 
                     <div class="clearfix"></div>
+                    <br><br><br>
+                    <div class="card-columns" id="colorWriter">
+                        <!--<h2><i class="fa fa-home fa-4x"></i></h2>-->
+                        <div class="card bg-info" style="max-width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Profile</h5>
+                                <!--p class="card-text" id="colorWriter">Some quick example text to build on the panel
+                                    title and make up the
+                                    bulk of the panel's content.</p-->
+                                <span class="float-right" id="colorIcon"><i class="fa fa-user fa-5x"></i></span>
+                                <br><br><br>
+                            </div>
+                            <div class="card-footer text-white">
+                                <small class="text-muted">Plus Info <a (click)="settingUser(user.id)"><i
+                                            class="fa fa-arrow-circle-right"></i></a></small>
 
-                    <div id="box">
+                            </div>
+                        </div>
+
+                        <div class="card bg-warning" style="max-width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Services</h5>
+                                <!--p class="card-text" id="colorWriter">Some quick example text to build on the panel
+                                    title and make up the
+                                    bulk of the panel's content.</p-->
+                                <span class="float-right" id="colorIcon"><i class="fa fa-building fa-5x"></i></span>
+
+                                <br><br><br>
+
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Plus Info <a (click)="service()"><i
+                                            class="fa fa-arrow-circle-right"></i></a></small>
+                            </div>
+                        </div>
+
+                        <div class="card bg-danger" style="max-width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Utilisateurs</h5>
+                                <!--p class="card-text" id="colorWriter">Some quick example text to build on the panel
+                                    title and make up the
+                                    bulk of the panel's content.</p-->
+                                <span class="float-right" id="colorIcon"><i class="fa fa-users fa-5x"></i></span>
+                                <br><br><br>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Plus Info <a (click)="goToUser()"><i
+                                            class="fa fa-arrow-circle-right"></i></a></small>
+
+                            </div>
+                        </div>
+
+                        <!--div class="card bg-danger" style="max-width: 18rem;height: 130px;">
+                            <div class="card-body text-center">
+                                <p class="card-text">Some text inside the fourth card</p>
+                            </div>
+                        </div-->
 
                     </div>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <!--div id="box">
+
+                    </div-->
+
+
+
+
+
+
+                    <!--test    <h2><i class="fa fa-home fa-3x"></i></h2>-->
+
+
+                    <!--/test-->
                 </div>
             </div>
             <!-- /page content -->
