--- a/src/app/Admin/edit-user/edit-user.component.html
+++ b/src/app/Admin/edit-user/edit-user.component.html
@@ -71,9 +71,8 @@
                                                         aria-expanded="true">Profile</a>
                                                 </li>
 
-                                                <li role="presentation" class="" *ngIf="ownerAccount?.role=='admin'"><a
-                                                        href="#tab_content3" role="tab" id="profile-tab2"
-                                                        data-toggle="tab" aria-expanded="false">Les
+                                                <li role="presentation" class=""><a href="#tab_content3" role="tab"
+                                                        id="profile-tab2" data-toggle="tab" aria-expanded="false">Les
                                                         accés</a>
                                                 </li>
                                             </ul>
@@ -220,7 +219,7 @@
                                                 </div>
 
                                                 <div role="tabpanel" class="tab-pane fade" id="tab_content3"
-                                                    aria-labelledby="profile-tab" *ngIf="ownerAccount?.role=='admin'">
+                                                    aria-labelledby="profile-tab">
                                                     <br>
                                                     <div id="decaler2">
                                                         <!-- service-->
