add upload photo part

--- a/src/app/Admin/parametre/parametre.component.html
+++ b/src/app/Admin/parametre/parametre.component.html
@@ -127,7 +127,13 @@
 
 
                                                         </div>
+
                                                         <br>
+                                                        <div class="form-group">
+                                                            <label> Photo</label><br>
+
+                                                            <input type="file" (change)="onSelectedFile($event)">
+                                                        </div><br>
 
 
 
