--- a/src/app/Admin/add-user/add-user.component.html
+++ b/src/app/Admin/add-user/add-user.component.html
@@ -147,6 +147,12 @@
                                                 appendTo="body" multiple="true" [(ngModel)]="selected">
                                             </ng-select>
                                         </div-->
+
+                                        <div class="form-group">
+                                            <label> Photo</label><br>
+
+                                            <input type="file" (change)="onSelectedFile($event)">
+                                        </div>
                                         <div class="form-group">
                                             <label> Liste des services</label><br>
 
