--- a/src/app/Admin/edit-user/edit-user.component.html
+++ b/src/app/Admin/edit-user/edit-user.component.html
@@ -199,6 +199,11 @@
                                                                     <option value="medecin">medecin</option>
                                                                 </select>
                                                             </div>
+                                                            <div class="form-group">
+                                                                <label> Photo</label><br>
+
+                                                                <input type="file" (change)="onSelectedFile($event)">
+                                                            </div>
                                                         </div>
 
 
