--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,9 @@
                 <li class="nav-item dropdown open" style="padding-left: 15px;">
                     <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown"
                         data-toggle="dropdown" aria-expanded="false">
-                        <img src="../assets/template/images/img.jpg" alt="">
+
+                        <img alt="" [src]="this.userService.url+'/photoUser/'+user.id" />
+
 
                         {{user.nom}} {{user.prenom}}
 
