--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,10 @@
         <!-- menu profile quick info -->
         <div class="profile clearfix">
             <div class="profile_pic">
-                <img src="../assets/template/images/img.jpg" alt="..." class="img-circle profile_img">
+
+                <img class="img-circle profile_img" [src]="this.userService.url+'/photoUser/'+user.id"
+                    style="width:50px;height: 50px;" />
+
             </div>
             <div class="profile_info" id="info">
                 <span>Welcome,</span>
