--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -46,7 +46,7 @@
 
                             </div>
                             <div class="card-footer">
-                                <small class="text-muted">Plus Info <a (click)="service()"><i
+                                <small class="text-muted">Plus Info <a (click)="services()"><i
                                             class="fa fa-arrow-circle-right"></i></a></small>
                             </div>
                         </div>
