--- a/src/app/Admin/detail-user/detail-user.component.html
+++ b/src/app/Admin/detail-user/detail-user.component.html
@@ -50,19 +50,23 @@
                                 <div class="x_content">
                                     <div class="col-md-3 col-sm-3  profile_left">
                                         <div class="profile_img">
-                                            <div id="crop-avatar" *ngIf="user?.sexe=='male'">
-                                                <!-- Current avatar -->
-
+                                            <!--div id="crop-avatar" *ngIf="user?.sexe=='male'">
+                                               
 
 
                                                 <img class="img-responsive avatar-view"
                                                     src="../assets/template/images/userPicture.png" alt="Avatar"
                                                     title="Change the avatar">
-                                            </div>
-                                            <div id="crop-avatar" *ngIf="user?.sexe=='female'">
+                                            </div-->
+                                            <!--div id="crop-avatar" *ngIf="user?.sexe=='female'">
                                                 <img class="img-responsive avatar-view"
                                                     src="../assets/template/images/femmePic.png" alt="Avatar"
                                                     title="Change the avatar">
+                                            </div-->
+                                            <div id="crop-avatar">
+                                                <img class="img-responsive avatar-view"
+                                                    [src]="this.userService.url+'/photoUser/'+user.id" alt="Avatar"
+                                                    title="Change the avatar" style="height: 230px;width: 200px;">
                                             </div>
                                         </div>
                                         <br>
