--- a/src/app/Admin/services/services.component.html
+++ b/src/app/Admin/services/services.component.html
@@ -58,7 +58,8 @@
                                                         <h2>{{c.nom}}</h2>
                                                         <ul class="nav navbar-right panel_toolbox">
                                                             &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;
-                                                            <li><a class="close-link"><i class="fa fa-pencil"></i></a>
+                                                            <li><a (click)="editService(c.id)" title="edit"><i
+                                                                        class="fa fa-pencil"></i></a>
                                                             </li>
                                                             <li><a class="close-link"><i class="fa fa-close"></i></a>
                                                             </li>
