--- a/src/app/Admin/services/services.component.html
+++ b/src/app/Admin/services/services.component.html
@@ -61,7 +61,8 @@
                                                             <li><a (click)="editService(c.id)" title="edit"><i
                                                                         class="fa fa-pencil"></i></a>
                                                             </li>
-                                                            <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                                            <li><a title="delete" (click)="deleteConfirme(c)"><i
+                                                                        class="fa fa-close"></i></a>
                                                             </li>
 
 
@@ -116,7 +117,8 @@
                                                         <h2>{{c.nom}}</h2>
                                                         <ul class="nav navbar-right panel_toolbox">
                                                             &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;
-                                                            <li><a class="close-link"><i class="fa fa-share"></i></a>
+                                                            <li><a title="enable" (click)="enableConfirme(c)"><i
+                                                                        class="fa fa-share"></i></a>
                                                             </li>
 
                                                         </ul>
