add validation on forget pwd and login component

--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -3,45 +3,19 @@
 
         <div class="animate form ">
             <section class="login_content">
-                <form>
+                <form data-parsley-validate class="form-horizontal form-label-left" novalidate
+                    [formGroup]="forgetPwdForm" (ngSubmit)="onForgetPassword()">
                     <h1>Login Form</h1>
                     <div>
                         <input type="text" class="form-control" placeholder="Username" name="username"
-                            [(ngModel)]="username" required="" />
+                            formControlName="username" required />
                     </div>
-                    <!--div *ngIf="mode==1">
-                        <div class="alert alert-danger alert-dismissible fade show" *ngIf="errMsg">
-                            <strong>Error!</strong> A problem has been occurred while submitting your username.
 
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                        </div>
-                        <div class="alert alert-primary" role="alert" *ngIf="!errMsg">
-                            <strong>Check your email</strong> To receive the password forgotting!
-                        </div>
-                    </div-->
                     <div>
-                        <button type="button" class="btn btn-primary" (click)="onForgetPassword()" data-toggle="modal"
-                            data-target="#exampleModal">Primary</button>
+                        <button type="submit" class="btn btn-primary"
+                            [disabled]="forgetPwdForm.invalid">Envoyer</button>
                     </div>
-                    <!--div *ngIf="emailCheckBox==true   &&  mode==0">
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" data-backdrop="false"
-                            aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Error</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Fill in the gups
-                                    </div>
 
-                                </div>
-                            </div>
-                        </div>
-                    </div-->
                     <div>
                         <a class="btn btn-default submit" routerLink="/login">Log in</a>
 
