--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -24,17 +24,18 @@
                     <div class="clearfix"></div>
 
                     <div class="separator">
-                        <p class="change_link">New to site?
-                            <a href="#signup" class="to_register"> Create Account </a>
-                        </p>
 
                         <div class="clearfix"></div>
                         <br />
 
                         <div>
-                            <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
-                            <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and
-                                Terms</p>
+                            <div>
+                                <img src="../assets/template/images/test1.png" alt="...">
+                            </div>
+                            <p>©2020 All Rights Reserved. PrescLIB!</p>
+                            <p style="color: #eeeeee;">--------------------------------------------------------
+                            </p>
+
                         </div>
                     </div>
                 </form>
