--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,12 +17,12 @@
 
                     </a>
                     <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="javascript:;"> Profile</a>
-                        <a class="dropdown-item" href="javascript:;">
+                        <a class="dropdown-item" href="javascript:;" (click)="profileUser(user.id)"> Profile</a>
+                        <a class="dropdown-item" href="javascript:;" (click)="settingUser(user.id)">
                             <span class="badge bg-red pull-right">50%</span>
-                            <span>Settings</span>
+                            <span>Parametre</span>
                         </a>
-                        <a class="dropdown-item" href="javascript:;">Help </a>
+                        <!--a class="dropdown-item" href="javascript:;">Help </a-->
                         <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-sign-out pull-right"></i> Log
                             Out</a>
                     </div>
