--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,13 @@
 <div class="col-md-3 left_col">
     <div class="left_col scroll-view" id="test">
-        <div class="navbar nav_title" style="border: 0;">
-            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
-        </div>
-        <!--div class="profile_pic" style="margin-left:20px;">
-            <img src="../assets/template/images/c.jpg" alt="..." id="logo">
-        </div-->
+        <div class="navbar nav_title" style="border: 0;margin-top: -15px">
+            <!--a href="index.html" class="site_title">
+                <i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a-->
+
+            <img src="../assets/template/images/logo1.jpg" alt="...">
+
+        </div><br><br><br>
+
         <div class="clearfix"></div>
 
         <!-- menu profile quick info -->
