add patients liste part

--- a/src/app/Admin/edit-user/edit-user.component.html
+++ b/src/app/Admin/edit-user/edit-user.component.html
@@ -284,6 +284,11 @@
 
                                                             </div>
                                                         </div>
+                                                        <div class="row" *ngIf="servicesOccupied?.totalElements==0">
+                                                            <div id="box">
+
+                                                            </div>
+                                                        </div>
 
 
 
