add detail patient part

--- a/src/app/Secretaire/patients/patients.component.html
+++ b/src/app/Secretaire/patients/patients.component.html
@@ -86,7 +86,8 @@
                                                                 <td>{{c.profession}}</td>
                                                                 <td>{{c.telephone}}</td>
                                                                 <td>
-                                                                    <a class="btn btn-success btn-xs" title="view"><i
+                                                                    <a class="btn btn-success btn-xs" title="view"
+                                                                        (click)="detailPatient(c.id)"><i
                                                                             class="fa fa-folder"></i> </a>
 
 
@@ -102,7 +103,8 @@
                                                                 <td>{{c.profession}}</td>
                                                                 <td>{{c.telephone}}</td>
                                                                 <td>
-                                                                    <a class="btn btn-success btn-xs" title="view"><i
+                                                                    <a class="btn btn-success btn-xs" title="view"
+                                                                        (click)="detailPatient(c.id)"><i
                                                                             class="fa fa-folder"></i> </a>
                                                                     <a class="btn btn-info btn-xs" title="edit"><i
                                                                             class="fa fa-pencil"></i> </a>
