--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,12 +1,12 @@
 <div class="col-md-3 left_col">
     <div class="left_col scroll-view" id="test">
-        <div class="navbar nav_title" style="border: 0;margin-top: -15px">
+        <div class="navbar nav_title" style="border: 0;margin-top: -15px;padding: 10px;">
             <!--a href="index.html" class="site_title">
                 <i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a-->
 
             <img src="../assets/template/images/logo1.jpg" alt="...">
 
-        </div><br><br><br>
+        </div><br><br><br><br><br>
 
         <div class="clearfix"></div>
 
